--- a/application/admin/view/category/edit.html
+++ b/application/admin/view/category/edit.html
@@ -71,7 +71,7 @@
     <div class="form-group">
         <label for="c-description" class="control-label col-xs-12 col-sm-2">{:__('Description')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-description" class="form-control" name="row[description]">{$row.description|htmlentities}</textarea>
+            <textarea id="c-description" class="form-control edit" name="row[description]">{$row.description|htmlentities}</textarea>
         </div>
     </div>
     <div class="form-group">
