--- a/application/admin/view/category/add.html
+++ b/application/admin/view/category/add.html
@@ -75,7 +75,7 @@
     <div class="form-group">
         <label for="c-description" class="control-label col-xs-12 col-sm-2">{:__('Description')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-description" class="form-control" name="row[description]"></textarea>
+            <textarea id="c-description" class="form-control editor" name="row[description]"></textarea>
         </div>
     </div>
     <div class="form-group">
