--- a/application/admin/view/user/group/edit.html
+++ b/application/admin/view/user/group/edit.html
@@ -31,7 +31,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">当月销售额:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-month" class="form-control" name="row[month]" type="text" value="">
+            <input id="c-month" class="form-control" name="row[month]" type="text" value="{$row.month}">
         </div>
     </div>
     <div class="form-group layer-footer">
