--- a/application/admin/view/user/group/add.html
+++ b/application/admin/view/user/group/add.html
@@ -34,6 +34,12 @@
             <input id="c-month" class="form-control" name="row[month]" type="text" value="">
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">佣金比例:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-proportion" class="form-control" name="row[proportion]" type="text" value="">
+        </div>
+    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
