--- a/application/admin/view/user/group/edit.html
+++ b/application/admin/view/user/group/edit.html
@@ -35,9 +35,21 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">佣金比例:</label>
+        <label class="control-label col-xs-12 col-sm-2">自购佣金比例:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-proportion" class="form-control" name="row[proportion]" type="text" value="{$row.proportion}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">团长佣金比例:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-commission1" class="form-control" name="row[commission1]" type="text" value="{$row.commission1}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">团员佣金比例:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-commission2" class="form-control" name="row[commission2]" type="text" value="{$row.commission2}">
         </div>
     </div>
     <div class="form-group layer-footer">
