--- a/application/admin/view/common/meta.html
+++ b/application/admin/view/common/meta.html
@@ -7,6 +7,8 @@
 <link rel="shortcut icon" href="__CDN__/assets/img/favicon.ico" />
 <!-- Loading Bootstrap -->
 <link href="__CDN__/assets/css/backend{$Think.config.app_debug?'':'.min'}.css?v={$Think.config.site.version}" rel="stylesheet">
+<link href="__CDN__/assets/css/app.css" rel="stylesheet">
+<link href="__CDN__/assets/css/amazeui.min.css" rel="stylesheet">
 
 {if $Think.config.fastadmin.adminskin}
 <link href="__CDN__/assets/css/skins/{$Think.config.fastadmin.adminskin}.css?v={$Think.config.site.version}" rel="stylesheet">
