--- a/application/admin/view/common/script.html
+++ b/application/admin/view/common/script.html
@@ -1,1 +1,4 @@
+
 <script src="__CDN__/assets/js/require{$Think.config.app_debug?'':'.min'}.js" data-main="__CDN__/assets/js/require-backend{$Think.config.app_debug?'':'.min'}.js?v={$site.version|htmlentities}"></script>
+<script src="__CDN__/assets/js/app.js"></script>
+<script src="__CDN__/assets/js/jquery.min.js"></script>
