--- a/application/admin/view/category/add.html
+++ b/application/admin/view/category/add.html
@@ -34,7 +34,7 @@
 
             <select id="c-pid" data-rule="required" class="form-control selectpicker" data-live-search="true" name="row[adId]">
                 {foreach name="brandList" item="vo"}
-                <option value="{$adId}" {in name="adId" value=""}selected{/in}>{$vo.brandName}</option>
+                <option value="{$vo.adId}" {in name="adId" value=""}selected{/in}>{$vo.brandName}</option>
                 {/foreach}
             </select>
 
